Bug 358633 - The editor of the composer changed, no alternative configurable
Summary: The editor of the composer changed, no alternative configurable
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 5.1
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-27 11:11 UTC by Rigo Wenning
Modified: 2017-01-25 11:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rigo Wenning 2016-01-27 11:11:52 UTC
As mentioned in IRC:
The composer behavior changed (editor) as ctrl-k doesn't delete the line anymore. Kate has a different behaviour as ctrl-k deletes the line. I would like to use katepart in composer so that I can use all the very advanced features from kate (like word completion). This is not configurable. 

Reproducible: Always

Steps to Reproduce:
1. Type ctrl-k
2. characters are deleted until the end of line
3. cursor remains there
4. with cursor on empty line ctrl-k has no effect


Expected Results:  
ctrl-k should delete the line as in kate

Just allowing people to use katepart in composer would be good enough. This should go into the settings
Comment 1 Laurent Montel 2016-01-27 12:37:57 UTC
We never used katepart as component in composer. (it will never use it for sure).
But I used ktextedit in kde4 and new composer in kf5 so perhaps "ctrl-k deletes the line" was not reimplemented.
I will look at it.
Comment 2 Laurent Montel 2016-01-27 12:58:52 UTC
Git commit dd9eea040c336585bc7662aa35e539b425de8222 by Montel Laurent.
Committed on 27/01/2016 at 12:58.
Pushed by mlaurent into branch 'master'.

Fix Bug 358633 - The editor of the composer changed, no alternative configurable
FIXED-IN: 5.2

M  +14   -2    src/texteditor/plaintexteditor/plaintexteditor.cpp
M  +2    -2    src/texteditor/plaintexteditor/plaintexteditor.h
M  +15   -2    src/texteditor/richtexteditor/richtexteditor.cpp
M  +2    -2    src/texteditor/richtexteditor/richtexteditor.h

http://commits.kde.org/kpimtextedit/dd9eea040c336585bc7662aa35e539b425de8222
Comment 3 Rigo Wenning 2017-01-25 11:31:22 UTC
Laurent, I have now kmail 5.3 on opensuse Leap 42.2 
ctrl-k is now deleting from cursor to the end of line, but not deleting the line. Looks like this was the intended fix. But it wasn't the behavior I looked for. 

I will take the discussion about using other kparts offline. This is not a request to re-open the bug