Fix Bug 358633 - The editor of the composer changed, no alternative configurable

BUG: 358633
FIXED-IN: 5.2